[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "fastapi-vercel"
version = "0.0.1"
description = "FastAPI project deployed on Vercel"
readme = "README.md"
requires-python = "3.9"

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "click==8.1.8",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.11",
    "h11==0.14.0",
    "httpx==0.24.0",
    "idna==3.10",
    "jinja2==3.1.2",
    "motor==3.7.0",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pymongo==4.11.2",
    "pyngrok==7.2.3",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "typing_extensions==4.12.2",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff"
]

[project.urls]
Source = "https://github.com/marcorichetta/fastapi-vercel"

[tool.black]
line-length = 120
fast = true